--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,7 +26,10 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
+file.reference.javaee-web-api-8.0.1.jar=C:\\Users\\Acer\\Desktop\\javaee-web-api-8.0.1.jar
+file.reference.mariadb-java-client-2.5.4.jar=E:\\dowlands\\mariadb-java-client-2.5.4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +44,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv5ee8
 jar.compress=false
 javac.classpath=\
-    ${libs.jsf20.classpath}
+    ${libs.jsf20.classpath}:\
+    ${file.reference.mariadb-java-client-2.5.4.jar}:\
+    ${file.reference.javaee-web-api-8.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,7 +73,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
